# adventofcode

2025/01/: GNUmakefile
2025/01/part1/: GNUmakefile  README.md  input  main.py
2025/01/part2/: GNUmakefile  input  main.py  main_test.py  pyproject.toml
2025/01/redo1/: main.py
2025/02/part1/: GNUmakefile  main.py  main_test.py  pyproject.toml
2025/02/part2/: GNUmakefile  main.py  main_test.py
2025/02/redo1/: GNUmakefile  main.py  pyproject.toml
2025/03/part1/: GNUmakefile  main.py  main_test.py  pyproject.toml
2025/03/part2/: main.py  main_test.py
2025/04/part2/: main.py  main_test.py
2025/05/part1/: main.py  main_test.py
2025/05/part2/: input  lhs  main.py  main_test.py  out  pyproject.toml  rhs
2025/06/part1/: main.py  main_test.py  pyproject.toml
2025/06/part2/: GNUmakefile  main.py  main_test.py
2025/07/part1/: main.py  main_test.py
2025/07/part2/: main.py  main_test.py
2025/08/part1/: main.py  main_test.py
2025/08/part2/: main.py  main_test.py  pyproject.toml
2025/09/part1/: main.py  main_test.py
2025/09/part2/: main.py  main_test.py
2025/10/part1/: main.py  main_test.py  pyproject.toml
2025/10/part2/: main.py  main_test.py  pyproject.toml
