[project]
name = "part1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ken Smith",email = "fwxgq.oysqv@fastmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "playwright (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
